Fixed blog alignment

--- a/styles/Blog.module.css
+++ b/styles/Blog.module.css
@@ -6,6 +6,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    align-items: center;
     overflow: hidden;
     overflow-y:auto 
 }
